# bagof-hints

./: README.md  pyproject.toml  zensical.toml
.github/workflows/: coverage.yaml  docs-on-push.yaml  test-matrix.yaml  test-on-push.yaml  test.yaml
docs/api/: array.md  builtin.md  collections.md  cupy.md  dask.md  flexi.py  immutable.md  index.md  index.py  json.md  strings.md  typevars.py  typevars_contra.md  typevars_infer.md  typevars_inv.md  unpackable.md
docs/api/numpy/: index.md
docs/api/numpy/typevars/: co.md  contra.md  index.md  infer.md  inv.md
docs/api/typevars/: co.md
src/bagof/hints/: __init__.py  _internal.py  array.py  builtin.py  collections.py  cupy.py  dask.py  flexi.py  immutable.py  json.py  strings.py  typevars.py  unpackable.py
src/bagof/hints/_internal/: compat.py
src/bagof/hints/_internal/typevars/: __init__.py  co.py  contra.py  infer.py  inv.py
src/bagof/hints/numpy/: __init__.py  _compat.py
src/bagof/hints/numpy/typevars/: __init__.py  co.py  contra.py  infer.py  inv.py
src/bagof/hints/typevars/: __init__.py  co.py  contra.py  infer.py  inv.py
tests/: requirements.txt  test_array.py  test_exports.py  test_import.py  test_mypy.py  test_protocols.py  test_typevars.py
