[project]
name = "bagof-hints"
authors = [
    {name = "Yael Balbastre", email = "yael.balbastre@gmail.com"},
]
maintainers = [
    {name = "Yael Balbastre", email = "yael.balbastre@gmail.com"},
]
description = "Reusable typing hints for Python projects"
readme = "README.md"
license = {text = "MIT"}
keywords = ["bagof", "typing", "hints"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "typing_extensions>=4.13",
]

[project.urls]
Homepage = "https://github.com/bagofseeds/bagof-hints"
Documentation = "https://github.com/bagofseeds/bagof-hints#readme"
Issues = "https://github.com/bagofseeds/bagof-hints/issues"
Repository = "https://github.com/bagofseeds/bagof-hints"

[project.optional-dependencies]
test = [
    "mypy==1.14.1",
    "pytest>=7",
    # Optional runtime dependency: exercises the numpy array hints and the
    # numpy-only TypeVars (``DTYPE`` / ``DTYPELIKE``). cupy is intentionally
    # not listed -- it is not pip-installable without a CUDA toolchain -- so
    # its hints are only exercised through the library-absent stub branch.
    "numpy",
    "dask[array]",
]

[build-system]
requires = [
    "setuptools>=59.0",
    "wheel>=0.45.1",
    "versioningit>=1.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"bagof.hints" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bagof*"]
namespaces = true

[tool.versioningit]
default-version = "0+unknown"

[tool.versioningit.vcs]
default-tag = "0.1"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "src/bagof/hints/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["bagof.hints"]

[tool.coverage.report]
exclude_also = [
    # Type-checking-only blocks never run at runtime.
    "if tx.TYPE_CHECKING:",
    "if tx.TYPE_CHECKING or",
]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "I", "UP", "W"]
ignore = [
    "ANN002",   # Do not type *args
    "ANN003",   # Do not type *kwargs
    "ANN401",   # Allow typing with Any
    # pyupgrade rules whose fixes break Python 3.8 (the supported floor)
    "UP006",    # list[...] annotations need 3.9 at runtime
    "UP007",    # X | Y unions need 3.10
    "UP035",    # deprecated typing import (typing_extensions is intentional)
    "UP045",    # X | None optionals need 3.10
]

[tool.mypy]
strict = true
python_version = "3.8"

[[tool.mypy.overrides]]
# numpy ships stubs using PEP 695 ``type`` syntax that mypy rejects under
# ``python_version = 3.8``. We only consume numpy's types structurally, so we
# skip analysing its stubs.
module = "numpy.*"
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.codespell]
check-filenames = true
skip = ".git,*.egg-info,build,dist,*.pdf,*.svg"
